--- a/_sass/tale.scss
+++ b/_sass/tale.scss
@@ -1,8 +1,8 @@
-@import 'tale/variables';
-@import 'tale/base';
-@import 'tale/code';
-@import 'tale/post';
-@import 'tale/syntax';
-@import 'tale/layout';
-@import 'tale/pagination';
-@import 'tale/catalogue';
+@import 'tale/_variables.scss';
+@import 'tale/_base.scss';
+@import 'tale/_code.scss';
+@import 'tale/_post.scss';
+@import 'tale/_syntax.scss';
+@import 'tale/_layout.scss';
+@import 'tale/_pagination.scss';
+@import 'tale/_catalogue.scss';
