--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
           <h2 class="nav-title">{{ site.title }}</h2>
         </a>
         <ul>
-          <li><a href="{{ '/about' | prepend: site.baseurl }}">Portfolio</a></li>
-          <li><a href="{{ '/blog' | prepend: site.baseurl }}"> Blog</a></li>
+          <li><a href="{{ '/about' | prepend: site.baseurl }}">Projects</a></li>
+          <li><a href="{{ '/blog' | prepend: site.baseurl }}"> About</a></li>
         </ul>
       </div>
     </nav>
