--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
+        <title>{{ page.title }}</title>
     </head>
     <body>
         <header>
-            <h1></h1>
+            <h1>{{ site.title }}</h1>
             <nav>
                 <ul>
                     <li><span>Home</span></li>
@@ -20,12 +20,11 @@
         </header>
 
         <main>
-            
-This is content
+            {{ content }}
         </main>
 
         <footer>
-            <p>&copy; 2023 Trung Nguyen</p>
+            <p>&copy; {{ site.year }} {{ site.author }}</p>
         </footer>
     </body>
 </html>
